# quickjs-varnish

./: CMakeLists.txt  README.md  build_website.sh  static_builder.py  upload.sh
scripts/: setup.sh
src/: embed_js.c  main.c
